add sft with eval for gsm8k

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ hotpot_qa/
 lost_in_conversation/
 sharded_data_sra/
 sft_data/gsm8k/1000/
+hf_sft_output/
+mlruns/
 
 # Environment variables
 .env
